--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,7 @@
         
 
 
-        <div class="image3">
+        <div class="image2">
             <div class="image-port">
                 <img src="Camera/IMG_20251112_222420[1].jpg" alt="Furniture project screenshot">
             </div> 
@@ -98,7 +98,8 @@
             </div>
 
               <div class="facebook">
-                <a href="https://www.facebook.com/Peculiar Udeh"><i class="fab fa-facebook facebook1"></i></a>
+                <a href="https://www.facebook.com/Peculiar Udeh
+                "><i class="fab fa-facebook facebook1"></i></a>
                 <a href="https://www.linkedin.com"><i class="fab fa-linkedin facebook2"></i></a>
                 <a href="https://www.twitter.com/Chibro1237"><i class="fab fa-twitter facebook3"></i></a>
                 <a href="https://www.github.com/Chidex05"><i class="fab fa-github facebook3"></i></a>
@@ -136,5 +137,4 @@
 
     <script src="script.js"></script>
 </body>
-
 </html>
