--- a/projects.html
+++ b/projects.html
@@ -58,8 +58,7 @@
                 <h3>Fashion</h3>
                 <p>Crafted for comfort lovers- a sleek
                     showcase of modern furniture pieces desined to showcase
-                    premium furniture pieces. Focused on elegance, smooth layout,
-                    and quick product highlights for a stylish user experience.
+                    premium furniture pieces.
                     <br>
                     <span class="span1">HTML</span> <span class="span1">CSS</span> <span class="span1">JAVASCRIPT</span>
                     <br><br>
